# arXivRAG

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  make.ps1  pyproject.toml  todo.md
docs/: ADR.md  demo.md
eval/: __init__.py  eval_set.json  generate.py  run_eval.py
src/arxiv_rag/: __init__.py  app.py  config.py  factory.py  logging_config.py
src/arxiv_rag/agent/: __init__.py  graph.py  nodes.py
src/arxiv_rag/domain/: __init__.py  types.py
src/arxiv_rag/ingestion/: __init__.py  corpus.py  indexer.py
src/arxiv_rag/llm/: __init__.py  client.py  prompts.py
src/arxiv_rag/retrieval/: __init__.py  embedder.py  vector_store.py
src/arxiv_rag/tools/: __init__.py  arxiv_api.py  base.py  vector_search.py
tests/: conftest.py  test_agent_integration.py  test_agent_loop.py  test_arxiv_tool.py  test_ingestion.py  test_prompts.py
