[project]
name = "arxiv-hybrid-rag"
version = "0.1.0"
description = "A hybrid RAG + agentic research assistant over arXiv papers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.69.0",
    "langgraph==0.2.60",
    "qdrant-client==1.12.1",
    "sentence-transformers==3.3.1",
    "arxiv==2.1.3",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "tenacity==9.0.0",
    "langchain-huggingface>=0.3.1",
]

# Dev and eval tooling live in dependency groups so `uv sync` installs them by
# default (optional-dependencies / extras are NOT installed unless explicitly
# requested with `--extra`, which is what left pytest missing).
[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-mock==3.14.0",
]
eval = [
    "ragas==0.2.9",
    "datasets==3.2.0",
    "langchain-anthropic==0.3.1",
]

[project.scripts]
arxiv-rag = "arxiv_rag.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_rag"]

[tool.uv]
# Install both groups by default so `uv sync` gives a fully-working setup
# (tests + eval) without extra flags. To skip: `uv sync --no-group eval`.
default-groups = ["dev", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests that may need external services (deselect with '-m \"not integration\"')",
]
